--- a/src/app/infos-generale/infos-generale.component.html
+++ b/src/app/infos-generale/infos-generale.component.html
@@ -365,12 +365,12 @@
               <div>
                 <h2>Votre logo</h2>
                 <img [src]="logourl" height="50"> <br/>
-                <input type='file' id="logo" (change)="onSelectLogo($event)">
+                <input type='file' id="logo" name="logo" (change)="onSelectLogo($event)" [formControl]="myForm.controls['logo']">
               </div>
               <div>
                 <h2>Votre photo</h2>
                 <img [src]="photoCommercanturl" height="200"> <br/>
-                <input type='file' id="logo" (change)="onSelectphotoCommercant($event)">
+                <input type='file' id="logo" name="photoCommercant" (change)="onSelectphotoCommercant($event)" [formControl]="myForm.controls['photoCommercant']">
               </div>
               
               
@@ -443,11 +443,11 @@
       <h2 class="text-center mt-3">Prévisualisation du résultat</h2>
       <mat-card class="example-card mt-3">
           <mat-card-header>
-            <div mat-card-avatar class="example-header-image"><img [src]="logourl" height="50" width="50px"></div>
+            <div mat-card-avatar *ngIf="myForm.controls['logo'].value != ''" class="example-header-image"><img [src]="logourl" height="50" width="50px"></div>
             <mat-card-title>{{myForm.controls['nomCommercial'].value}}</mat-card-title>
             <mat-card-subtitle>{{myForm.controls['secteur'].value}}</mat-card-subtitle>
           </mat-card-header>
-          <img mat-card-image [src]="photoCommercanturl" class="mt-3" height="200px">
+          <img mat-card-image *ngIf="myForm.controls['photoCommercant'].value != ''" [src]="photoCommercanturl" class="mt-3" height="200px">
           <mat-card-content>
             <div *ngIf="myForm.controls['ville'].value != ''">Ville: {{myForm.controls['ville'].value}}</div>
             <div *ngIf="myForm.controls['adresseCommerciale'].value != ''">Adresse: {{myForm.controls['adresseCommerciale'].value}}</div>            
